# multi-seed

./: .gitignore  AUTHORS  README.md  color_gui.py  common.py  config.py  constants.py  dataset.py  feature_mapper.py  image.py  io_utils.py  main.py  math_utils.py  projection.py  pyproject.toml  reference.py  requirements.txt  tift.py  tift_compatibility_script.py  tift_header.py
.github/workflows/: docs.yml
src/multiseed/: __init__.py  __main__.py  cli.py  config.py  dataset.py  image.py  ioutils.py  mapper.py  mathutils.py  reference.py  tift.py  viewer.py
